tests/ui/generator/layout-error.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/layout-error.rs:21:17
   |
LL |         let a = Foo;
   |                 ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
